--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,21 @@ body {
 }
 
 .login-wrap{
+  margin-top: 227px;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.login-statement{
+  color: #FFF;
+font-size: 16px;
+font-family: Euclid Circular B;
+
+}
+
+.login-txt{
+  color: #FFF;
+font-size: 32px;
+font-family: Euclid Circular B;
+
 }
